# indigo

./: .gitattributes  .gitignore  .hlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  cabal.project  flake.nix  fourmolu.yaml  funk.cabal  hello.fn  hie.yaml  indigo.cabal  indigo.vim  linkling2.wasm  new.txt  old.txt  out.wat  pi.hs  prisma.cabal  shell.nix  test.wat  weeder.toml
.github/workflows/: deploy.yml  haskell.yml  release.yml
app/: Analyzer.hs  JSEmitter.hs  Main.hs  Parser.hs  RustEmitter.hs  WASMEmitter.hs
examples/: Module1.in  Module2.in  bottles.in  casting.in  cities.in  complex_parser.in  ffi.in  ffi_strlen.in  fib.in  file_io.in  generic_struct.in  generics.in  guess.in  hello.prism  http.in  http_server.in  impl_generic.in  infix.in  kitchen-sink.in  kitchen-sink.prism  lambdas.in  learnxiny.in  monads.in  parser_combinator.in  pattern-matching.in  pi.in  raylib.in  scratch.in  scratch2.in  state.in  structfun.in  structured.in  sum.in  sum2.in  sum_types.in  test2.in  test2.prism  traits.in  typematching.in  when.in  (+1 more)
lib/: AST.hs  BytecodeCompiler.hs  CEmitter.hs  ErrorRenderer.hs  FFI.hs  Ffi.hs  IndigoConfig.hs  Interpreter.hs  Optimizer.hs  Parser.hs  QBE.hs  RegInst.hs  Util.hs  VM.hs  Verifier.hs  Verifier.hs.old  WASMEmitter.hs
lib/Compiler/: ControlFlow.hs  Functions.hs  Lists.hs  Literals.hs  Modules.hs  Refinements.hs  State.hs  Structs.hs  Traits.hs  Types.hs
lsp/: indigo-lsp.cabal  test_parse.hs
lsp/src/: Completion.hs  Diagnostics.hs  Hover.hs  IndigoPrelude.hs  Main.hs  ModuleResolver.hs  Position.hs  Server.hs
lsp/tests/: CompletionSpec.hs  DiagnosticsSpec.hs  HoverSpec.hs  ModuleResolverSpec.hs  PositionSpec.hs  ServerSpec.hs  TestUtils.hs
lsp/tests/data/: compile_error.in  completion_functions.in  completion_imports.in  completion_imports_unqualified.in  completion_nested_struct_fields.in  completion_prelude_struct_fields.in  completion_struct_fields.in  completion_structs.in  completion_variables.in  diagnostics_missing_module.in  hover_func.in  hover_literal.in  hover_qualified.in  hover_struct.in  hover_var.in  module2.in  parse_error.in  position_multiline.in  position_test.in  valid.in
obsolete/: CEmitter.hs  JSEmitter.hs  TreewalkingInterpreter.hs  WASMEmitter.hs  haskell-wasmtime.yml
share/std/: file.in  prelude.in  prelude.prism  sockets.in  test.in
tests/: BytecodeCompilerSpec.hs  FrontendSpec.hs  IndigoConfigSpec.hs  IntegrationSpec.hs  OptimizerSpec.hs  ParserSpec.hs  QBESpec.hs  RegInstSpec.hs  Test.hs  VerifierSpec.hs  VerifierSpec.hs.disabled
wasm_reactor/: build-wasm.sh  cabal.project  deploy_new_fiddle.sh  flake.nix  indigo-reactor.cabal  output-info.hs  test_error.in
wasm_reactor/app/: WASMReactor.hs
wasm_reactor/cbits/: init.c
website/: 404.html  elm.json  index.html  package-lock.json  package.json  vite.config.js
website/src/: Documentation.elm  Main.elm  editor-element.js  main.js  runner.js  style.css  terminal-element.js
