cabal-version: 3.0
name:          indigo
version:       0.1.0.0
license:       MPL-2.0
license-file:  LICENSE
maintainer:    ofelix@pm.me
author:        rockofox
build-type:    Simple
data-files:    **/*.in
data-dir:      share

flag ffi
    description: FFI

flag posix-io
    description: POSIX IO (network and file operations)
    default: True

library
    exposed-modules:
        Parser
        VM
        BytecodeCompiler
        AST
        Util
        RegInst
        Ffi
        Optimizer
        ErrorRenderer

    hs-source-dirs:     lib
    other-modules:      Paths_indigo
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings ImportQualifiedPost DisambiguateRecordFields
        DuplicateRecordFields DeriveGeneric BlockArguments LambdaCase
        OverloadedRecordDot RecordWildCards NamedFieldPuns

    ghc-options:        -Wall -O2
    build-depends:
        base >=4.17,
        containers >=0.6,
        text >=2.0,
        megaparsec,
        parser-combinators,
        mtl >=2.2,
        directory >=1.3,
        bytestring >=0.11,
        binary >=0.8,
        split,
        vector,
        monad-loops,
        filepath >=1.4,
        random

    if flag(posix-io)
        cpp-options: -DPOSIX_IO
        build-depends: network >=3.0

    if flag(ffi)
        cpp-options:   -DFFI
        build-depends: libffi

        if os(windows)
            build-depends: Win32

        else
            build-depends: unix >=2.7

executable indigo
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings ImportQualifiedPost DisambiguateRecordFields
        DuplicateRecordFields TemplateHaskell

    ghc-options:        -O2
    build-depends:
        base >=4.17,
        optparse-applicative,
        megaparsec,
        mtl >=2.2,
        text >=2.0,
        bytestring >=0.11,
        indigo,
        vector,
        timeit,
        repline,
        containers >=0.6,
        filepath >=1.4

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover >=2 && <3
    hs-source-dirs:     tests
    other-modules:
        ParserSpec
        BytecodeCompilerSpec
        IntegrationSpec
        RegInstSpec
        OptimizerSpec

    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings ImportQualifiedPost QuasiQuotes
        DisambiguateRecordFields DuplicateRecordFields OverloadedRecordDot
        LambdaCase

    ghc-options:        -fconstraint-solver-iterations=100
    build-depends:
        base >=4.17,
        hspec,
        hspec-contrib,
        QuickCheck,
        indigo,
        generic-arbitrary,
        text >=2.0,
        vector,
        megaparsec,
        mtl >=2.2,
        raw-strings-qq
